--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,7 +1,8 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"  xmlns:h="http://xmlns.jcp.org/jsf/html" 
-      xmlns:p="http://primefaces.org/ui" xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
         <title>Livros</title>
@@ -19,7 +20,7 @@
 
         <h:form id="Servicos">            
             <p:separator />
-            <p:dataTable var="servico"  value="#{servicoBean.servicos}" rows="10" paginator="true"  caseSensitiveSort="true"
+            <p:dataTable id="dataTable" var="servico"  value="#{servicoBean.servicos}" rows="10" paginator="true"  caseSensitiveSort="true"
                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                          rowsPerPageTemplate="5,10,15" emptyMessage="Não existem servicos cadastrados">
                 <p:column headerText="Título" sortBy="#{servico.status}">
@@ -55,7 +56,7 @@
                 <p:outputLabel for="fim" value="fim" />
                 <p:datePicker id="fim" value="#{servicoBean.entidade.fim}" required="true"/>
 
-                <p:commandButton value="Submit" action="#{servicoBean.salvar()}" ajax="true" icon="pi pi-check" />
+                <p:commandButton value="Submit" action="#{servicoBean.salvar()}" ajax="true" icon="pi pi-check" update="dataTable"/>
             </h:panelGrid>
 
         </h:form>
